--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BlackCoffer</string>
+    <string name="app_name">NewLearning</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="explore">Explore</string>
@@ -36,4 +36,10 @@
     <string name="movies">Movies</string>
     <string name="pending">Pending</string>
     <string name="totalCount">/250</string>
+
+
+    <string name="tab_personal">Personal</string>
+    <string name="tab_business">Business</string>
+    <string name="tab_merchant">Merchant</string>
+
 </resources>
